# tachyon-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  openapi.json  package-lock.json  package.json  release-tag-prefixes.json
cli/: Cargo.toml
cli/src/: agent_cli.rs  api_key_cli.rs  auth.rs  build_reproduce.rs  client.rs  cloud_app_build_job.rs  compute_cli.rs  config.rs  iac_cli.rs  image_cli.rs  install_cli.rs  linear_cli.rs  main.rs  mcp_cli.rs  ops_cli.rs  org_cli.rs  pm_cli.rs  pm_resource_cli.rs  reconcile_cli.rs  resolve.rs  secret_cli.rs  skills_cli.rs  slack_cli.rs  source_cli.rs  switch_cli.rs  tts_cli.rs  worker_cli.rs
cli/src/commands/: init.rs
cli/src/compute_cli/: apps.rs  builds.rs  change_control.rs  deployments.rs  domains.rs  env.rs  local.rs  mod.rs  scaling.rs
cli/src/config/: auth.rs  loader.rs  mod.rs
cli/src/manifest/: apply.rs  discovery.rs  mod.rs  plan.rs  reconcile.rs  schema.rs  validate.rs
cli/src/mcp/: auth.rs  mod.rs  openai.rs  server.rs
cli/tests/: agent_models.rs  api_key_cli.rs  auth_cli.rs  auth_manifest_auth.rs  coding_job_create.rs  coding_job_run.rs  compute_watch.rs  iac_cli.rs  init_config.rs  notify_cli.rs  profile_auth.rs  reproduce.rs  secret_cli.rs  sentry_cli.rs  tool_job_create.rs  tool_job_run.rs
cli/tests/fixtures/: mock-build-config.yaml
rust/: Cargo.toml  README.md
rust/.openapi-generator/: FILES
rust/docs/: ActionEvaluationRequest.md  ActionEvaluationResult.md  ActionListResponse.md  ActionResponse.md  AddUserToTenantRequest.md  AddressRequest.md  AddressResponse.md  AgentApi.md  AgentBuiltinToolRequest.md  AgentBuiltinToolType.md  AgentChunk.md  AgentChunkEvent.md  AgentChunkEventOneOf.md  AgentChunkEventOneOf1.md  AgentChunkEventOneOf10.md  AgentChunkEventOneOf2.md  AgentChunkEventOneOf3.md  AgentChunkEventOneOf4.md  AgentChunkEventOneOf5.md  AgentChunkEventOneOf6.md  AgentChunkEventOneOf7.md  AgentChunkEventOneOf8.md  AgentChunkEventOneOf9.md  AgentExecuteRequest.md  AgentMessage.md  AgentMessagesResponse.md  AgentProtocolMode.md  AgentSessionEntry.md  AgentSource.md  AgentStatusResponse.md  AgentToolAccessRequest.md  AllowedTenantResponse.md  ApiKeyListResponse.md  ApiKeyResponse.md  Ask.md  AttachUserPolicyRequest.md  AttachUserPolicyWithScopeRequest.md  AttemptCompletionResult.md  AuthApiKeysApi.md  AuthOAuth2ClientsApi.md  (+194 more)
rust/src/: lib.rs  payment.rs  procurement.rs  secrets.rs  worker_runtime.rs
rust/src/apis/: agent_api.rs  auth_api_keys_api.rs  auth_o_auth2_clients_api.rs  auth_o_auth2_consents_api.rs  auth_o_auth_tokens_api.rs  auth_operators_api.rs  auth_policies_api.rs  auth_service_accounts_api.rs  auth_user_policies_api.rs  auth_users_api.rs  auth_verify_api.rs  chat_api.rs  chatroom_api.rs  configuration.rs  crm_object_mappings_api.rs  default_api.rs  delivery_shipping_api.rs  delivery_software_api.rs  feature_flags_api.rs  integrations_api.rs  mod.rs  models_api.rs  notifications_api.rs  oauth_api.rs  order_checkout_api.rs  order_clients_api.rs  order_products_api.rs  order_purchase_orders_api.rs  order_quotes_api.rs  order_revenue_api.rs  order_shipping_api.rs  payment_api.rs  procurement_api.rs
rust/src/auth/: domain.rs  error.rs  executor.rs  inputs.rs  mod.rs  sdk_auth_app.rs  traits.rs  types.rs
rust/src/models/: action_evaluation_request.rs  action_evaluation_result.rs  action_list_response.rs  action_response.rs  add_user_to_tenant_request.rs  address_request.rs  address_response.rs  agent_builtin_tool_request.rs  agent_builtin_tool_type.rs  agent_chunk.rs  (+194 more)
rust/tests/: notifications_api.rs
(+1265 files in other folders)
