[workspace]

[package]
name = "tachyon"
version = "0.1.1"
edition = "2021"
description = "CLI for the Tachyon Platform"
license = "MIT"

[[bin]]
name = "tachyon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tachyon-sdk = { path = "../rust", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
