[package]
name = "tachyon"
version = "0.2.2"
edition = "2021"
description = "CLI for the Tachyon Platform"
license = "MIT"

[[bin]]
name = "tachyon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tachyon-sdk = { path = "../rust", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2"

[workspace]
