[package]
name = "tachyon"
version = "0.5.1"
edition = "2021"
description = "CLI for the Tachyon Platform"
license = "MIT"

[[bin]]
name = "tachyon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dirs = "6"
http = "1"
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "query", "rustls"] }
rmcp = { version = "1.5", features = [
    "server",
    "macros",
    "schemars",
    "transport-io",
    "transport-streamable-http-server",
    "server-side-http",
] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tachyon-sdk = { path = "../rust", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"

[workspace]
