[package]
name = "tachyon-sdk"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Tachyon Platform REST API"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "query", "form"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
auth = ["async-trait", "chrono"]
platform-traits = ["auth", "async-trait", "chrono"]
worker-runtime = ["async-trait", "chrono"]
test = ["auth", "mockall"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
